add_library(iterator iterator.cpp)
add_library(workspace workspace.cpp)
add_library(sudoku sudoku.cpp)
add_library(reader reader.cpp)
add_library(writer writer.cpp)
add_library(solver solver.cpp)
add_library(logger logger.cpp)

target_link_libraries(reader PUBLIC workspace sudoku logger)
target_link_libraries(writer PUBLIC workspace sudoku logger)
target_link_libraries(solver PUBLIC iterator sudoku logger)

target_include_directories(iterator PUBLIC ${CMAKE_CURRENT_LIST_DIR})
target_include_directories(workspace PUBLIC ${CMAKE_CURRENT_LIST_DIR})
target_include_directories(sudoku PUBLIC ${CMAKE_CURRENT_LIST_DIR})
target_include_directories(reader PUBLIC ${CMAKE_CURRENT_LIST_DIR})
target_include_directories(writer PUBLIC ${CMAKE_CURRENT_LIST_DIR})
target_include_directories(solver PUBLIC ${CMAKE_CURRENT_LIST_DIR})
target_include_directories(logger PUBLIC ${CMAKE_CURRENT_LIST_DIR})
